@@ -1,3 +1,10 @@
+2010-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/dialog.R: added funEnvir=FALSE argument to aDialog and
+	anItemGroup constructor. This gives passed in methods lexical
+	scope which seems to be the expected behaviour. Thanks to Gabor
+	for his help with this.
+
 2010-07-02  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/itemgroup.R: added method is_valid
